--- a/QuestionPage/questionDesign.css
+++ b/QuestionPage/questionDesign.css
@@ -33,7 +33,20 @@ body {
     height: 550px;
     display: inline;
     background-color: #E5E5E5;
-
+    font-family: 'Open Sans', sans-serif;
+    color: #a195a1;
+    font-size: 20px;
+    font-family: 'Open Sans', sans-serif;
+    border: 1px solid white;  
+    border-radius: 12px; 
+    text-align: start; 
+}
+a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: black;
+    display: block;
 }
 .add-quiz {
     width: 333px;
@@ -53,10 +66,6 @@ input {
     border: 1px solid white;  
     border-radius: 12px; 
     text-align: start;  
-}
-.list {
-    font-family: 'Open Sans', sans-serif;
-
 }
 .h {
     color:  #650061;
